<resources>
    <string name="app_name">Move It!</string>
    <string name="app_madeBy">Hecho por Alexander Correa</string>
    <string name="app_about">Juego de reacciones creado por Alexander Correa
        \nacorrea21@alumnos.utalca.cl
    </string>
    <string name="t_name">Nombre</string>
    <string name="t_introquestion">Reproducir intro</string>


    <string name="SharedPref">data</string>

    <string name="p_intro">p_intro</string>
    <string name="p_name">p_e</string>


    <string name="g_intro">¡Espera a que apareza una accion y hacela!</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="player_header">Jugador</string>
    <string name="app_header">Aplicaccion</string>
    <string name="difficult_header">Dificultad</string>

    <!-- Messages Preferences -->
    <string name="name_tittle">Nombre</string>
    <string name="highscore_title">Puntaje mas alto</string>
    <string name="reset_title">¿Reiniciar puntaje?</string>


    <string name="intro_title">¿Reproducir intro?</string>

    <string name="difficult1_title">Tiempo inicial de reaccion</string>
    <string name="difficult2_title">Aumentar dificultad cada x acciones</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>